# one-piece-wanted-poster

./: .gitignore  LICENSE.txt  README.md  WantedPoster.py  constants.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
src/wantedposter/: wantedposter.py
test/: test.py
wantedposter/wantedposter/: __init__.py  constants.py  wantedposter.py
