[metadata]
name = one-piece-wanted-poster
version = 0.0.12
author = Nickelza
author_email = nickjones7490@gmail.com
description = Python package to generate One Piece Wanted Posters
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/Nickelza/one-piece-wanted-poster
project_urls =
    Bug Tracker = https://github.com/Nickelza/one-piece-wanted-poster/issues
    repository = https://github.com/Nickelza/one-piece-wanted-poster
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    pillow~=9.4.0
    unidecode~=1.3.6
include_package_data = True

[options.packages.find]
where = src